--- a/public/css/Home-Style.css
+++ b/public/css/Home-Style.css
@@ -5,7 +5,7 @@ section {
 }
 
 .background-image {
-  background-image: url("/images/test2.jpg");
+  background-image: url("../images/test2.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
